--- a/playbooks/Message.yml
+++ b/playbooks/Message.yml
@@ -2,6 +2,7 @@
 - name: Send message to PCs
   hosts: win
   tasks:
-    - name: Send message
-      ansible.windows.win_msg:
-        msg: "This is a test message from Ansible."
+    - name: Warn logged in users of impending upgrade
+      community.windows.win_msg:
+        display_seconds: 60
+        msg: Automated upgrade about to start.  Please save your work and log off before 1pm.
